--- a/package/package.json
+++ b/package/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "h",
+    "name": "my-game",
     "description": "My EET1 game.",
     "product-name": "my-game",
     "license": "MIT"
